2011-07-22	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1839/filesystem
	* libcsupport/include/rtems/libio_.h, libcsupport/src/fchdir.c,
	libcsupport/src/fdatasync.c, libcsupport/src/fpathconf.c,
	libcsupport/src/fsync.c, libcsupport/src/ftruncate.c,
	libcsupport/src/read.c, libcsupport/src/readv.c,
	libcsupport/src/write.c, libcsupport/src/writev.c: Some calls did not
	return proper status for permission errors or incorrectly permissions
	at all.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/rtems/rtems_showipstat.c: Print IP input queue drops.

2011-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/dosfs/fat_file.c, libmisc/monitor/monitor.h,
	score/cpu/m68k/rtems/score/cpu.h: Remove stray spaces from unsigned32
	to uint32_t conversion.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio_.h: Added
	rtems_filesystem_is_root_location().
	* libfs/src/imfs/imfs_directory.c, libfs/src/imfs/imfs_eval.c,
	libfs/src/dosfs/msdos_dir.c, libfs/src/dosfs/msdos_eval.c: Use
	rtems_filesystem_is_root_location().

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1842/cpukit
	* score/include/rtems/score/basedefs.h: Added RTEMS_STATIC_ASSERT().

2011-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/chain.h: Fix typo.

2011-07-19	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1838/filesystem
	* libcsupport/src/fchmod.c: fchmod() does not need a writeable file
	descriptor.

2011-07-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/src/msgqcreate.c: Make packet size check consistent with
	_Message_queue_MP_Send_request_packet().

2011-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c: Fixed reply parsing.

2011-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/src/msgmp.c: Getting a remote object does not start a critical
	section.
